# revng-flake

./: flake.nix
revng-js-dependencies/: package-lock.json  package.json
revng-python-dependencies/: pyproject.toml  requirements.txt
