[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = ">=22.12.0,<23.0"
flake8 = ">=7.0.0,<8.0"
flake8-breakpoint = ">=1.1.0,<2.0"
flake8-builtins = ">=2.1.0,<3.0"
flake8-comprehensions = ">=3.10.1,<4.0"
flake8-eradicate = ">=1.4.0,<2.0"
flake8-simplify = ">=0.19.3,<1.0"
pep8-naming = ">=0.13.3,<1.0"
isort = ">=5.11.4,<6.0"
types-backports = "^0.1.3"
types-pyyaml = "^6.0.12.20240808"
types-requests = "^2.32.0.20240712"
types-urllib3 = "^1.26.25.14"
ariadne = {version = ">=0.20.1", extras = ["asgi-file-uploads"]}
cffi = "^1.17.0"
jinja2 = "^3.1.4"
gql = {extras = ["aiohttp"], version = "^3.5.0"}
jsonschema = ">=4.17.3,<4.18.0"
networkx = "^3.3"
pefile = "^2023.2.7"
pycparser = "^2.22"
pydot = "^3.0.1"
pyelftools = "^0.31"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
rich = "^13.7.1"
psutil = "^6.0.0"
build = "^1.2.1"
uvicorn = "0.22.0"
httptools = ">=0.5.0"
python-dotenv = ">=0.13"
websockets = ">=10.4"
xdg = "^6.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.32"
yq = "^3.4.3"
marko = "^2.1.2"
flake8-return = "^1.2.0"
mkdocs-graphviz = "^1.5.3"
grandiso = {git = "https://github.com/revng/grandiso-networkx.git", rev = "043ce4b"}
python-idb = {git = "https://github.com/revng/python-idb.git", rev = "08ba07a"}
mypy = "^1.11.1"
cmakelang = "^0.6.13"
expandvars = "^0.12.0"
pyyaml = "^6.0.2"
lit = "^18.1.8"
wheel = "0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
